Add release step

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL=. react-scripts build",
+    "release": "npm run build && git checkout gh-pages && sh ./build.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
