--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "react-test-renderer": "^16.12.0"
   }
 }
