--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "PUBLIC_URL=. react-scripts build",
+    "start": "npm-run-all --parallel watch:css start:react",
+    "build": "npm-run-all build:css build:react",
     "release": "npm run build && git checkout gh-pages && sh ./build.sh",
+    "build:css": "postcss src/tailwind.css -o src/styles.css --env production",
+    "watch:css": "postcss src/tailwind.css -o src/styles.css -w",
+    "start:react": "react-scripts start",
+    "build:react": "PUBLIC_URL=. react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -31,10 +35,16 @@
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-syntax-highlighter": "^12.2.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "node-sass": "^4.13.0",
-    "react-test-renderer": "^16.12.0"
+    "react-test-renderer": "^16.12.0",
+    "autoprefixer": "^9.7.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^6.1.3",
+    "tailwindcss": "^1.1.4"
   }
 }
