--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
   "dependencies": {
     "@babel/standalone": "^7.7.7",
     "codemirror": "^5.49.2",
+    "firebase": "^7.6.1",
+    "firebaseui": "^4.4.0",
     "react": "^16.12.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.12.0",
+    "react-firebaseui": "^4.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-syntax-highlighter": "^12.2.1"
