--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "npm-run-all --parallel watch:css start:react",
     "build": "npm-run-all build:css build:react",
     "release": "npm run build && git checkout gh-pages && sh ./build.sh",
-    "build:css": "postcss src/tailwind.css -o src/styles.css --env production",
-    "watch:css": "postcss src/tailwind.css -o src/styles.css -w",
+    "build:css": "postcss src/main.css -o src/coditor.css --env production",
+    "watch:css": "postcss src/main.css -o src/coditor.css -w",
     "start:react": "react-scripts start",
     "build:react": "PUBLIC_URL=. react-scripts build",
     "test": "react-scripts test",
@@ -32,14 +32,14 @@
     "@babel/standalone": "^7.7.7",
     "codemirror": "^5.49.2",
     "firebase": "^7.6.1",
-    "firebaseui": "^4.4.0",
     "react": "^16.12.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-syntax-highlighter": "^12.2.1"
+    "react-syntax-highlighter": "^12.2.1",
+    "undux": "^5.0.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
