fix styles file path in package scripts

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "npm-run-all --parallel watch:css start:react",
     "build": "npm-run-all build:css build:react",
     "release": "npm run build && git checkout gh-pages && sh ./build.sh",
-    "build:css": "postcss src/main.css -o src/coditor.css --env production",
-    "watch:css": "postcss src/main.css -o src/coditor.css -w",
+    "build:css": "postcss src/styles/main.css -o src/styles/coditor.css --env production",
+    "watch:css": "postcss src/styles/main.css -o src/styles/coditor.css -w",
     "start:react": "react-scripts start",
     "build:react": "PUBLIC_URL=. react-scripts build",
     "test": "react-scripts test",
