--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "codemirror": "^5.49.2",
     "firebase": "^7.6.1",
     "react": "^16.12.0",
+    "react-beforeunload": "^2.1.0",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.0.0",
