--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,6 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
-        npm test
+        CI=true npm test
       env:
         CI: true
